# jeplu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt  main.cpp
cmake/: FindLibZip.cmake  FindQtCore.cmake  Findzip.cmake
example/custom-plugin/: CustomPlugin.cpp  CustomPlugin.hpp
example/custom-proxy/: ICustomInterface.hpp  QCustomProxy.cpp  QCustomProxy.hpp
example/custom_plugin/: CMakeLists.txt  customplugin.cpp  customplugin.hpp
example/qt-custom-plugin/: CMakeLists.txt  QCustomPlugin.hpp  qcustomplugin.cpp  qcustomplugin.hpp
include/: ILibFinder.hpp  IPlugin.hpp  IPluginAdapter.hpp  IPluginManager.hpp  IPluginProxy.hpp  IQtPlugin.hpp  Jeplu.hpp  dlplugincreator.h  dlplugincreator.hpp  iplugin.hpp  ipluginmanager.hpp  ipluginproxy.hpp  iqtplugin.hpp  jeplu_api.hpp  plugindefinitions.h
src/: CMakeLists.txt  Jeplu.cpp  Jeplu.hpp  dlloader.cpp  dlloader.hpp  ipluginfactory.hpp  ipluginloader.hpp  pluginfactory.cpp  pluginfactory.hpp  pluginmanager.cpp  pluginmanager.hpp  qtloader.cpp  qtloader.hpp
src/JepluLibFinder/: CMakeLists.txt  JepluLibFinder.cpp  JepluLibFinder.hpp
src/core/: CMakeLists.txt  ILibFinder.hpp  IPluginFactory.hpp  IPluginLoader.hpp  PluginFactory.cpp  PluginFactory.hpp  PluginManager.cpp  PluginManager.hpp  ipluginfactory.hpp  ipluginloader.hpp  pluginfactory.cpp  pluginfactory.hpp  pluginmanager.cpp  pluginmanager.hpp
src/dlopen-loader/: CMakeLists.txt  DlLoader.cpp
src/installer/: Archive.cpp  Archive.hpp  Artifact.cpp  Artifact.hpp  CMakeLists.txt  PluginArchive.cpp  PluginArchive.hpp  PluginExporter.hpp  PluginInstaller.cpp  PluginInstaller.hpp  Zip.cpp  Zip.hpp
src/loaders/: CMakeLists.txt  DlLoader.cpp  DlLoader.hpp  QtLoader.cpp  QtLoader.hpp  dlloader.hpp  qtloader.cpp  qtloader.hpp
src/qt-loader/: CMakeLists.txt  QtLoader.cpp
test/: CMakeLists.txt  CMakeLists.txt.in  FakeLibFinder.hpp  PluginManagerTest.hpp  main.cpp
test/Jeplu/: JepluTest.hpp
test/PluginManager/: FakeLibFinder.hpp  PluginManagerTest.hpp
test/example/custom-adapter/: ICustomInterface.hpp  QCustomAdapter.cpp  QCustomAdapter.hpp
test/example/custom-plugin/: CMakeLists.txt  CustomPlugin.cpp
test/example/custom-proxy/: ICustomInterface.hpp  QCustomProxy.cpp  QCustomProxy.hpp
test/example/qt-custom-plugin/: CMakeLists.txt  QCustomPlugin.cpp
test/jeplu-test/: CMakeLists.txt  main.cpp
test/jeplu-test/Jeplu/: JepluTest.hpp
test/unit-tests/: CMakeLists.txt  main.cpp
test/unit-tests/PluginManager/: FakeLibFinder.hpp  PluginManagerTest.hpp  mockloader.hpp
